7903711: Rewrite simple methods ANC plugin to classfile API